--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 #game {
-  display: block;
+  background-color: rgb(250, 231, 150);
+  border: gray 1px solid;
+  padding: 10px;
+  text-align: center;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 .hidden {
@@ -7,13 +11,22 @@
 }
 
 #result-screen {
-  display: block;
+  background-color: rgb(163, 198, 244);
+  border: gray 1px solid;
+  padding: 10px;
+  text-align: center;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+p {
+  font-weight: bold;
+  font-size: large;
 }
 
 button {
-  padding: 10px;
+  padding: 15px;
   margin: 18px;
-  font-size: 20px;
+  font-size: 28px;
   border: none;
   border-radius: 4px;
   background-color: rgb(61, 110, 217);
