--- a/style.css
+++ b/style.css
@@ -1,4 +1,53 @@
 #game {
+  background: rgb(252, 71, 65);
+  background: linear-gradient(
+    0deg,
+    rgba(252, 71, 65, 1) 0%,
+    rgba(105, 2, 8, 1) 63%
+  );
+  border: gray 1px solid;
+  padding: 10px;
+  text-align: center;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  color: #fff;
+}
+
+.hidden {
+  display: none;
+}
+
+#result-screen {
+  background-color: rgb(163, 198, 244);
+  border: gray 1px solid;
+  padding: 10px;
+  text-align: center;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+p {
+  font-size: 200%;
+  font-weight: 600;
+}
+
+#choose-mssg {
+  font-weight: 700;
+}
+
+button {
+  padding: 15px;
+  margin: 18px;
+  font-size: 28px;
+  border: none;
+  border-radius: 4px;
+  background-color: rgb(61, 110, 217);
+  color: #fff;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  cursor: pointer;
+  box-shadow: 5px 5px 5px rgb(53, 47, 59);
+}
+
+/*
+#game {
   background-color: rgb(250, 231, 150);
   border: gray 1px solid;
   padding: 10px;
@@ -34,3 +83,4 @@ button {
   cursor: pointer;
   box-shadow: 5px 5px 5px rgb(53, 47, 59);
 }
+*/
